--- a/deploy.yml
+++ b/deploy.yml
@@ -13,6 +13,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Install AWS CLI
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y awscli
+
       - name: Configure AWS credentials
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -23,5 +28,5 @@ jobs:
 
       - name: Deploy to AWS
         run: |
-          # Your deployment steps here, using AWS CLI or SDK
+          # Your deployment steps here, using AWS CLI
 
