--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,5 +56,5 @@ jobs:
 
       - name: Terraform Apply
         id: apply
-        run: terraform apply -auto-approve -input = false
+        run: terraform apply 
      
