--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
       - main
   pull_request:
 permissions:
-      id-token: write # This is required for aws oidc connection
+      id-token: write # This is required for aws oidc connections
       contents: read # This is required for actions/checkout
       pull-requests: write # This is required for gh bot to comment PR
 env:
